kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-application-name-here
  labels:
    app: your-application-name-here
spec:
  type: ClusterIP
  ports:
  - name: 8080-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: your-application-name-here
